# axum-wayfind

./: Cargo.toml  README.md
src/: extract.rs  lib.rs  router.rs  strip_prefix.rs  syntax.rs
src/extract/: matched_path.rs  mod.rs  path.rs
src/extract/path/: de.rs  mod.rs
tests/: integration.rs
