[package]
name = "axum-wayfind"
description = "Axum router backed by wayfind instead of matchit."
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
keywords = ["router", "axum", "wayfind"]
categories = ["web-programming"]
repository = "https://github.com/joonas/axum-wayfind"
readme = "README.md"

[dependencies]
wayfind = { version = "0.9" }
axum = { version = "0.8", default-features = false }
axum-core = "0.5"
http = "1.0"
bytes = "1.7"
tower-service = "0.3"
tower-layer = "0.3"
tower = { version = "0.5", default-features = false, features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
percent-encoding = "2.1"
pin-project-lite = "0.2"

[dev-dependencies]
axum = { version = "0.8", features = ["json", "tokio"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "1.4", features = ["client"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
